# Computer_Graphics

./: README.md
1.Hand/: .gitignore  CMakeLists.txt  README.md  conanfile.txt
1.Hand/data/: Hand.fbx
1.Hand/src/: CMakeLists.txt  main.cpp  skeletal_mesh.cpp  skeletal_mesh.h  texture_image.cpp  texture_image.h
2.Camera/: conan_mingw_profile.txt  conanfile.txt
2.Camera/src/: CMakeLists.txt  main.cpp  skeletal_mesh.cpp  skeletal_mesh.h  texture_image.cpp  texture_image.h
3.Textures/: CMakeLists.txt  README.md  conan_mingw_profile.txt  conanfile.txt
3.Textures/src/: CMakeLists.txt  camera.cpp  camera.h  frag.glsl  light.hpp  main.cpp  shader.cpp  shader.h  vert.glsl
RSM/: CMakeLists.txt  LICENSE  README.md  conanfile.txt
RSM/src/: CMakeLists.txt  camera.cpp  camera.h  light.hpp  main.cpp  mesh.hpp  model.hpp  shader.cpp  shader.h
RSM/src/shaders/: light_space_shader.frag  light_space_shader.vert  main_shader.frag  main_shader.vert
